<resources>
    <string name="app_name">Pharma</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="rupees">₹</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_your_number">Mobile Number</string>
    <string name="enter_code">Enter Code</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="otp_fragment">OTP Fragment</string>
    <string name="app_icon">App icon</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="mobile_fragment">Mobile Fragment</string>
    <string name="register_fragment">Register Fragment</string>
    <string name="sending_code">Sending code</string>
    <string name="resend_code">Resend Code</string>
    <string name="change_mobile">Change mobile</string>
    <string name="signin">Sign In</string>
    <string name="signing_you_in">Signing you in</string>
    <string name="reset_mail_send">Send password Reset Mail</string>
    <string name="login">Login</string>
    <string name="request_password_reset">Reset</string>
    <string name="signup">Sign Up</string>
    <string name="creating_account">Creating Account</string>
    <string name="_91">+91</string>
    <string name="google_oauth_id">355131248441-90uflo4o58g1sus21hek383a93sn3cp2.apps.googleusercontent.com</string>
    <string name="facebook_app_id">160411635271553</string>
    <string name="fb_login_protocol_scheme">fb148688762819262</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_medicine">Search medicine</string>
    <string name="category">Category</string>
    <string name="more">More</string>
    <string name="user">User</string>
    <string name="tab_text_1">General</string>
    <string name="tab_text_2">Disease</string>
    <string name="sort">Sort</string>
    <string name="relevance">Relavance</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="price_low_to_high">Price Low to High</string>
    <string name="price_high_to_low">Price High to Low</string>
    <string name="discount">Discount</string>
    <string name="checkout">Checkout</string>
    <string name="top_ncategories">Top\nCategories</string>
    <string name="med">Med</string>
    <string name="care">care</string>
    <string name="cart">Cart</string>
    <string name="upload_your_prescription">Upload your Prescription</string>
    <string name="medicines">Medicines</string>
    <string name="orders">Orders</string>
    <string name="reminders">Reminders</string>
    <string name="chat">Chat</string>
    <string name="test_report">Test Report</string>
    <string name="favorites">Favorites</string>
    <string name="wallet">Wallet</string>
    <string name="prescription">Prescription</string>
    <string name="reduce_quantity">Reduce Quantity</string>
    <string name="increase_quantity">Increase Quantity</string>
    <string name="show_cart">Show Cart</string>
    <string name="camera">Camera</string>
    <string name="my_prescription">My Prescription</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_image_based">ImageBasedActivity</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="cancelled">Cancelled</string>
    <string name="add">Add</string>
    <string name="my_orders">My Orders</string>
    <string name="view_cart">View cart</string>
    <string name="search">Search</string>
    <string name="compose_shortcut_long_label1">compose_shortcut_long_label1</string>
    <string name="compose_disabled_message1">compose_disabled_message1</string>

    <string name="add_to_cart">Add to cart</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="title_activity_select_address_from_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_address">Add New Address</string>
    <string name="no_address_found">No address found</string>
    <string name="loading_address">Loading address</string>
    <string name="select_address">Select Address</string>
    <string name="flat_no">Flat / Home Number</string>
    <string name="address">Address Line 1</string>
    <string name="addressLine2">Address Line 2</string>
    <string name="nearestLandMark">Nearest Landmark</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="add_address">Add Address</string>
    <string name="address_error_message">Error occurred, Try again after sometime</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="total_payable">Total Payable</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="order_total">Order Total</string>
    <string name="pincode">Pin Code</string>
    <string name="saving">Saving...</string>
    <string name="online_payments">Online Payments</string>
    <string name="paytm">Paytm</string>
    <string name="wallet_payments">Wallets</string>
    <string name="phonepay">PhonePay</string>
    <string name="amazonPay">Amazon Pay</string>
    <string name="googlePay">Google Pay</string>
    <string name="credit"><![CDATA[Credit, Debit & ATM Cards]]></string>
    <string name="netbanking">Netbanking</string>
    <string name="pay_using">Pay Using</string>
    <string name="cod">Cash On Delivery</string>
    <string name="pay_mode">Pay Mode</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="choose_mode">Choose Mode</string>
    <string name="credit_debit_card">Credit / Debit Card</string>
    <string name="earliest_delivery">Earliest Delivery:\n10:00 AM To 5:00 PM</string>
    <string name="select_delivery_time">Select delivery time</string>
    <string name="no_slots">No slots available</string>
    <string name="deliver_on">Deliver on</string>
    <string name="loading_slots">Loading slots</string>
    <string name="order_created_successfully">Order created successfully</string>
    <string name="total_saving">Total Saving</string>
    <string name="pay_amount">Total Amount</string>
    <string name="payment">Payment</string>
    <string name="delivery_at">Delivery At:</string>
    <string name="delivery">Delivery At</string>
    <string name="total_discount">Total Discount</string>
    <string name="order_status">Order Status</string>
    <string name="need_help">Need help?</string>
    <string name="say_something">Say Somthing</string>
    <string name="online">Online</string>
    <string name="add_a_caption">Add a caption</string>
    <string name="send">Send</string>
    <string name="document">Document</string>
    <string name="disease">Disease</string>
    <string name="no_diseases_included">No diseases inclided</string>
    <string name="need_pres">No prescription needed</string>
    <string name="not_pres">Prescription needed</string>
    <string name="cancel">Cancel</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="medicineType">Medicine Type</string>
    <string name="company">Company</string>
    <string name="availability">Availability</string>
    <string name="stockAvailable">Stock Available</string>
    <string name="prescriptionNeeded">Prescription needed</string>
    <string name="no_prescription_needed">No prescription needed</string>
    <string name="apply">Apply</string>
    <string name="clear_all">Clear all</string>
    <string name="all_tests">All Tests</string>
    <string name="test_category">Test Category</string>
    <string name="book_on_call">Book on Call</string>
    <string name="upload_prescription">Upload Prescription</string>
    <string name="no_medicines">No Medicine Found</string>
    <string name="loading_orders">Loading orders</string>
    <string name="loading">Loading</string>
    <string name="recent_test">Recent test seen</string>
    <string name="name">Name</string>
    <string name="end_section">End Section</string>
    <string name="onwards">Onwards</string>
    <string name="book_now">Book Now</string>
    <string name="test_pref_name">RECENT_TEST</string>
    <string name="upload_the_prescription">Upload the prescription</string>
    <string name="enter_address">Enter Address</string>
    <string name="edit">Edit</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="add_a_reminder">Add New Reminder</string>
    <string name="reminder_pref_name">Reminder_Preference</string>
    <string name="reminder_pref_name_for_time_slot">slots</string>
    <string name="optional">Optional</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="snooze">Snooze</string>
    <string name="confirm">Confirm</string>
    <string name="search_prefix">Adding to</string>
    <string name="confirm_med_reminder">Please confirm the medicine name and reminder time.</string>
    <string name="delete">Delete</string>
    <string name="delete_medicine">Delete medicine</string>
    <string name="check">Check</string>
    <string name="view_all">View All</string>
    <string name="call_to_order">Call to Order</string>
    <string name="my_refills">My Refills</string>
    <string name="recent_medicine">Recent Medicines</string>

</resources>
