<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pharma.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_category"
            app:destination="@id/navigation_category" />
    </fragment>

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.pharma.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.pharma.ui.user.UserFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.pharma.ui.more.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more" />

</navigation>
