<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#fff"
            android:gravity="start"
            android:padding="20dp"
            android:text="@string/call_to_order"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="17sp"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_phone"
            android:id="@+id/callToOrder"
            app:iconPadding="30dp"
            app:iconTint="@null"
            app:rippleColor="@color/view_color" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:padding="20dp"

            android:layout_marginTop="10dp"
            app:cornerRadius="8dp"
            android:textSize="17sp"
            app:rippleColor="@color/view_color"
            android:gravity="start"
            app:iconTint="@null"
            android:backgroundTint="#fff"
            android:layout_marginStart="20dp"
            android:textColor="#000"
            android:layout_marginEnd="20dp"
            android:id="@+id/needHelp"
            app:icon="@drawable/ic_my_prescription"
            android:textAllCaps="false"
            app:iconPadding="30dp"

            android:text="@string/need_help"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/myRefills"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#fff"
            android:gravity="start"
            android:padding="20dp"
            android:text="@string/my_refills"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="17sp"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_fav_list"
            app:iconPadding="30dp"
            app:iconTint="@null"
            app:rippleColor="@color/view_color" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:id="@+id/recentMedicines"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#fff"
            android:gravity="start"
            android:onClick="seenRecent"
            android:padding="20dp"
            android:text="@string/recent_medicine"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="17sp"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_resent_black_24dp"
            app:iconPadding="30dp"
            app:iconTint="@null"
            app:rippleColor="@color/view_color" />



</LinearLayout>