<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginStart="16sp"
    android:layout_marginEnd="16sp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textColor="#A6000000"
        android:layout_marginTop="20dp"
        android:text="Choose your\nLocation"
        android:textSize="30sp"
        android:id="@+id/title"
        android:layout_height="wrap_content"/>
    <ImageButton
        android:layout_width="40dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:scaleType="centerCrop"
        android:tint="#A6000000"
        android:background="?selectableItemBackgroundBorderless"
        android:onClick="backClicked"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_height="40dp"
        android:contentDescription="@string/cancel" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/pincode"
        android:layout_marginTop="30dp"
        android:inputType="date"
        android:autofillHints="@string/pincode"
        android:layout_below="@id/title"
        android:imeOptions="actionSearch"

        android:hint="Enter PIN Code"
        android:padding="9dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rectangle_border"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/title"
        android:padding="11dp"
        android:id="@+id/actionButton"
        android:layout_marginTop="23.8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/check"
        android:textSize="16sp"
        android:onClick="checkPincode"
        android:textAllCaps="false"
        android:layout_height="wrap_content"/>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_below="@id/pincode"
        android:layout_marginTop="10dp"
        android:id="@+id/parent"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/address"
        android:visibility="gone"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/location_icon_border_grey"
        android:layout_height="wrap_content"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/title"
        android:padding="10.5dp"
        android:layout_marginTop="20dp"
        android:id="@+id/progressbar"
        android:elevation="5dp"
        android:visibility="gone"
        android:layout_marginEnd="20dp"
        android:text="@string/check"
        android:indeterminateTint="#fff"
        android:textSize="16sp"
        android:onClick="checkPincode"
        android:textAllCaps="false"
        android:layout_height="60dp"/>
    <Button
        android:layout_width="match_parent"
        android:padding="16dp"
        android:text="@string/next"
        android:enabled="false"
        android:id="@+id/nextBt"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"/>
</RelativeLayout>