<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    app:cardCornerRadius="20dp"
    android:layout_gravity="bottom"
    android:layout_marginBottom="-10dp"
    tools:context=".SelectSlotFragment">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/progressbar"
        android:layout_height="500dp">
    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/progress"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/title"
        android:text="@string/loading_slots"
        android:gravity="center"
        android:layout_below="@id/progress"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/slotField"
        android:layout_height="500dp">
    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/deliver_on"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_marginStart="16dp" />
        <RelativeLayout
            android:id="@+id/deliveryDisplay"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/field_background"
            android:elevation="3dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/Deliverytime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="11dp"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:text="Delivery"
                android:textColor="#000"
                android:textSize="20sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/deliveryExtras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/Deliverytime"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="20dp"
                android:text="@string/select_delivery_time"
                android:textSize="16sp"
                android:visibility="visible" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/RelativeDelivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone">

            <include layout="@layout/deliveryformat" />
        </RelativeLayout>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:padding="12dp"
        android:text="@string/next"
        android:visibility="gone"
        android:layout_gravity="bottom"
        app:icon="@drawable/ic_keyboard_arrow_right_black_24dp"
        app:iconGravity="end"
        android:id="@+id/nextBt"
        android:layout_height="wrap_content"/>
</androidx.cardview.widget.CardView>